--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     compile project(':rainingimageview')
+    //compile 'com.github.andy6804tw:RainingImageView-lib:1.0.0'
 }
